--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,16 @@
         }
     ],
     "require": {
-        "php": "^8.0"
+        "php": "^8.0",
+        "pear/console_table": "^1.3"
+    },
+    "repositories": {
+        "packagist": {
+            "type": "composer",
+            "url": "https://packagist.org"
+        }
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.2"
+        "phpunit/phpunit": "^11.2"
     }
 }
